# quantus

./: .env.example  .gitignore  CLAUDE.md  Gitee_SSH_推送配置指南.md  README.md  main.py  pyproject.toml  start.py  uv.toml
.claude/commands/: tushare-api.md
config/: tushare_api_channels.json
docs/: ETL模块分类与命名规范.md  bulk_upsert_postgresql性能深度分析.md  etl-audit-bugs.md  etl-test-runbook.md  tushare因子.csv  tushare因子.md  tushare接入进度.md  因子数据补全开发计划.md  国泰191-数据需求与ETL对照.md  开发进度.md  财报-report_income入库load_report性能分析.md  量化层完整方案.md  量化层方案-历史对话记录.md
docs/analysis/: delist-date-backfill-from-kline.md  missing-kline-vs-trading-20250703.md  trading-vs-kline-20260703.md  zombie-delist-stocks-20250703.md
scripts/: analyze_kline_missing.py  backfill_suspend_history.py  bench_report_cashflow_load.py  generate_tushare_channel_config.py  git_origin.py  tushare_channel_probe.py
scripts/etl_audit/: resolve_test_dates.py  run_phase3c.sh  run_phase3d.sh  sample_semantic.py  snapshot_status.py  table_baseline.py  verify_bug_fixes.sh
spec/api/: API开发规范.sdd.md  README.md
spec/etl/: K线-完整性校验.sdd.md  K线-按date区间增量.sdd.md  K线-更新复权因子完整性快照.sdd.md  K线-更新日线完整性快照.sdd.md  K线-更新涨跌停完整性快照.sdd.md  README.md  log-缺失日志.sdd.md  业绩快报.sdd.md  业绩预告.sdd.md  主营业务构成.sdd.md  仓库-PG日K导出Parquet.sdd.md  分红送股.sdd.md  前十大流通股东.sdd.md  前十大股东.sdd.md  基础-A股停复牌数据入库.sdd.md  基础-A股股票列表拉取.sdd.md  基础-交易日历增量入库.sdd.md  基础-活跃股票数.sdd.md  大宗交易.sdd.md  技术面因子.sdd.md  指数基本信息.sdd.md  指数成分权重.sdd.md  指数日线行情.sdd.md  每日指标-日频基本面.sdd.md  沪深港通-十大成交股.sdd.md  沪深港通资金流向.sdd.md  港股通持股.sdd.md  特色-龙虎榜机构明细.sdd.md  申万行业分类.sdd.md  申万行业成分构成.sdd.md  (+12 more)
(+792 files in other folders)
