[project]
name = "quantus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.1",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "httpx>=0.28.0",
    "langchain-openai>=1.1.7",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "questionary>=2.1.1",
    "sqlalchemy>=2.0.45",
    "tqdm>=4.67.1",
    "tushare>=1.4.24",
    "typer>=0.24.1",
    "uvicorn[standard]>=0.38.0",
    "apscheduler>=3.10",
    "pyarrow>=18.0.0",
    "duckdb>=1.1.0",
    "polars>=1.0",
]

[project.scripts]
quantus-api = "src.api.main:run"
quantus-scheduler = "src.scheduler.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
